--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,86 @@
 <resources>
     <string name="app_name">Sudoku</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+    <!-- Board Configuration Settings -->
+    <string name="pref_title_board_config">Board Configuration</string>
+    <!-- Board Size Selection -->
+    <string-array name="pref_board_sizes">
+        <item>4x4</item>
+        <item>9x9</item>
+    </string-array>
+    <!-- Board Size Selection Values -->
+    <string-array name="pref_board_size_values">
+        <item>4</item>
+        <item>9</item>
+    </string-array>
+    <string name="pref_defalut_size">9</string>
+    <!-- Level Selection Category -->
+    <string name="pref_title_level_selection">Select Level</string>
+    <string-array name="pref_board_level">
+        <item>Easy</item>
+        <item>Medium</item>
+        <item>Hard</item>
+    </string-array>
+    <string-array name="board_level_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+
+    <!-- Example settings for Data & Sync -->
+    <string name="pref_header_data_sync">Data &amp; sync</string>
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>15 minutes</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+        <item>Never</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+        <item>-1</item>
+    </string-array>
+
+    <string-array name="list_preference_entries">
+        <item>Entry 1</item>
+        <item>Entry 2</item>
+        <item>Entry 3</item>
+    </string-array>
+
+    <string-array name="list_preference_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="multi_select_list_preference_default_value" />
+
+    <string name="pref_title_system_sync_settings">System sync settings</string>
+
+    <!-- Example settings for Notifications -->
+    <string name="pref_header_notifications">Notifications</string>
+
+    <string name="pref_title_new_message_notifications">New message notifications</string>
+
+    <string name="pref_title_ringtone">Ringtone</string>
+    <string name="pref_ringtone_silent">Silent</string>
+
+    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="title_activity_sudoku_settings">Settings</string>
+    <string name="title_activity_small_board">SmallBoard</string>
+    <string name="title_activity_large_board">LargeBoardActivity</string>
+    <string name="title_activity_sudoku_board">Sudoku</string>
 </resources>
